Fix Java 11 compatibility: replace toList() with collect(Collectors.toList())